# media-downloader

./: LICENSE  README.md
orchestrator/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  config.example.toml  docker-compose.yaml  justfile
orchestrator/src/: config.rs  di_container.rs  entities.rs  interactors.rs  main.rs
orchestrator/src/adapters/database/: tx_manager.rs
orchestrator/src/adapters/database/daos/: chat.rs  downloaded_media.rs
orchestrator/src/entities/: chat.rs  downloaded_media.rs  version.rs
orchestrator/src/interactors/: chat.rs
orchestrator/src/presentation/: tg_bot.rs
orchestrator/src/presentation/tg_bot/: utils.rs
orchestrator/src/presentation/tg_bot/filters/: text_url.rs
orchestrator/src/presentation/tg_bot/handlers/: start.rs
orchestrator/src/presentation/tg_bot/middlewares/: create_chat.rs
orchestrator/src/presentation/tg_bot/utils/: error.rs
orchestrator/src/value_objects/: media_type.rs
proto/worker/api/: version.proto
proto/worker/api/v1/: download.proto  limits.proto
proto/worker/test/: echo.proto
worker/: Cargo.toml  build.rs  config.example.toml
worker/src/: adapters.rs  config.rs  di_container.rs  entities.rs  interactors.rs  main.rs  signal.rs  utils.rs  value_objects.rs
worker/src/adapters/: ffmpeg.rs  yt_toolkit.rs  ytdl.rs
worker/src/entities/: audio.rs  combined_format.rs  cookies.rs  format.rs  media.rs  thumbnail.rs  video.rs
worker/src/interactors/: download.rs
worker/src/interactors/download/: audio.rs  thumbnail.rs  video.rs
worker/src/presentation/: grpc.rs
worker/src/presentation/grpc/: api.rs  test.rs  utils.rs
worker/src/presentation/grpc/api/: v1.rs  version.rs
worker/src/presentation/grpc/api/v1/: download.rs  limits.rs
worker/src/presentation/grpc/utils/: di_container.rs  parse.rs
worker/src/utils/: aspect.rs  errors.rs  macros.rs  thumbnail.rs  url.rs
worker/src/value_objects/: aspect.rs
