[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"
publish = false

license-file = "../LICENSE"

[dependencies]
prost = { version = "0.14", features = ["derive"], default-features = false }
tonic = { version = "0.14", features = ["router", "transport", "codegen", "tls-webpki-roots", "zstd"], default-features = false }
tonic-prost = { version = "0.14", default-features = false }

futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process", "fs", "signal"], default-features = false }
tokio-stream = { version = "0.1", default-features = false }
reqwest = { version = "0.12", features = ["rustls-tls", "charset", "stream"], default-features = false }
froodi = { version = "1.0.0-beta.15", features = ["async", "thread_safe", "axum"], default-features = false }
telers = { version = "1.0.0-alpha.29", features = ["default_signal", "rustls-tls"], default-features = false }
sea-orm = { version = "1.1", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-uuid"], default-features = false }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "ansi", "env-filter"], default-features = false }

serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
toml = { version = "0.9", features = ["parse", "serde"], default-features = false }
time = { version = "0.3", features = ["serde-human-readable"], default-features = false }

thiserror = { version = "2.0", default-features = false }
anyhow = { version = "1.0", default-features = false }

url = { version = "2.5", default-features = false }
bytes = { version = "1", default-features = false }
backoff = { version = "0.4", features = ["tokio"], default-features = false }

[build-dependencies]
tonic-build = { version = "0.14", features = ["transport"], default-features = false }
tonic-prost-build = { version = "0.14", features = ["transport"], default-features = false }

[profile.dev]
debug = 0
